// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BIMDataInput should render a button with a slot and match snapshot 1`] = `
"<div class=\\"bimdata-input\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-8\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\">test icon slot</div> <label for=\\"bimdata-input-8\\"></label> <span class=\\"bar\\"></span>
  <!---->
  <!---->
</div>"
`;

exports[`BIMDataInput should render component and match snapshot 1`] = `
"<div class=\\"bimdata-input\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-0\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-0\\"></label> <span class=\\"bar\\"></span>
  <!---->
  <!---->
</div>"
`;

exports[`BIMDataInput should render component with 'not empty' class and match snapshot 1`] = `
"<div class=\\"bimdata-input not-empty\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-6\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-6\\"></label> <span class=\\"bar\\"></span>
  <!---->
  <!---->
</div>"
`;

exports[`BIMDataInput should render component with error message and match snapshot 1`] = `
"<div class=\\"bimdata-input error\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-2\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-2\\"></label> <span class=\\"bar\\"></span> <span class=\\"error\\">error message</span>
  <!---->
</div>"
`;

exports[`BIMDataInput should render component with placeholder and match snapshot 1`] = `
"<div class=\\"bimdata-input\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-1\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-1\\">input placeholder</label> <span class=\\"bar\\"></span>
  <!---->
  <!---->
</div>"
`;

exports[`BIMDataInput should render component with success message and match snapshot 1`] = `
"<div class=\\"bimdata-input success\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-3\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-3\\"></label> <span class=\\"bar\\"></span>
  <!----> <span class=\\"success\\">success message</span>
</div>"
`;

exports[`BIMDataInput should render disabled component and match snapshot 1`] = `
"<div class=\\"bimdata-input disabled\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-5\\" disabled=\\"disabled\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-5\\"></label> <span class=\\"bar\\"></span>
  <!---->
  <!---->
</div>"
`;

exports[`BIMDataInput should render loading component and match snapshot 1`] = `
"<div class=\\"bimdata-input loading\\" style=\\"margin: 12px 0px;\\"><input id=\\"bimdata-input-4\\" autocomplete=\\"off\\">
  <div class=\\"bimdata-input__icon\\"></div> <label for=\\"bimdata-input-4\\"></label> <span class=\\"bar\\"></span>
  <!---->
  <!---->
</div>"
`;
